2008-04-28  ARAKI Yasuhiro  <ar@debian.org>

	* Added article controller.

2008-04-25  ARAKI Yasuhiro  <ar@debian.org>

	* app/apis/meta_weblog_service.rb (MetaWeblogService::article_dto_from): Fix to modify by BlogEditor for non-HTML article.
	(MetaWeblogService::editPost): likewise.

	* app/apis/blogger_service.rb (BloggerService::newPost): Change to use UTC.

	* app/models/article.rb (Article::renew_mtime): Chage to use UTC time. Please set environment.rb "config.active_record.default_timezone = :utc".

	* app/models/article_sweeper.rb 
	(ArticleSweeper::ep_category): Fix.
	(ArticleSweeper::ep_atom): Fix to remove /atom/feed.xml.

	* test/integration/cache_test.rb (CacheTest::test_caching_notes): Add to check it.

	* lib/antispam.rb (AntiSpam::scan_uri_format): Fix to accept trackback from "https" URL.
	* test/functional/notes_controller_test.rb (NotesControllerTest::test_trackback_1a): Add to check it.

2008-04-20  ARAKI Yasuhiro  <ar@debian.org>

	* app/controllers/rdf_controller.rb (RdfController::rdf_category): Fix SQL syntax.

	* vender/plugins/classic_pagination: Remove.

	* app/controllers/rdf_controller.rb (RdfController::rdf_category): Change to use will_paginate.

	* app/controllers/admin/trackback_controller.rb (Admin::manage_trackback): Change to use will_paginate.

	* app/controllers/admin/article_controller.rb (Admin::manage_article): likewise.

	* app/views/admin/article/manage_article.rhtml: likewise.

	* app/controllers/admin/attachment_controller.rb (Admin::manage_don_attachment): likewise.

	* app/views/admin/attachment/manage_don_attachment.rhtml: likewise.

	* app/views/admin/banlist/manage_banlist.rhtml: likewise.

	* app/controllers/admin/banlist_controller.rb (Admin::manage_banlist): likewise.

	* app/controllers/admin/category_controller.rb (Admin::manage_category): likewise.

	* app/views/admin/category/manage_category.rhtml: likewise.

	* app/controllers/admin/comment_controller.rb (Admin::manage_comment): likewise.
